test/invalid/fc34950_TypeChecking_Cast_Sheeps/SheeTypeB.plume
/**
 * SheepTypeB.plume
 *
 * Test: This class represent a Sheep of third generation
 *
 * @author namartins
 * @version $Id: SheeTypeB.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
 
 abstract class SheepTypeB extends SheepTypeA is	
 	method override generation : () -> Integer is
 		(Integer)(new SheepTypeA())   // error